--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@headlessui/react": "^2.0.3",
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
+    "i": "^0.3.7",
     "mongoose": "^8.3.2",
-    "next": "14.1.4",
+    "next": "^14.2.3",
     "nodemailer": "^6.9.13",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
